feat: adicionar archetype de post e atualizar conteúdo para Java 25